# ros2_pointcloud_procesing

./: .gitignore  Dockerfile  README.md  docker-compose.yml
ros_workspace/install/: setup.sh
ros_workspace/log/: latest_build
ros_workspace/src/my_pointcloud_project/: CMakeLists.txt
ros_workspace/src/my_pointcloud_project/include/my_pointcloud_project/: PointCloudProcessor.hpp
ros_workspace/src/my_pointcloud_project/src/: PointCloudProcessor.cpp  main.cpp
